--- a/Weather/Base.lproj/Main.storyboard
+++ b/Weather/Base.lproj/Main.storyboard
@@ -1,24 +1,161 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qxQ-BJ-0SE">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Splash Screen View Controller-->
+        <scene sceneID="a2z-3h-cdl">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="qxQ-BJ-0SE" customClass="SplashScreenViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="P0Y-Kq-vAn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ForecastIO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8B8-sV-weT">
+                                <rect key="frame" x="99" y="321" width="177.5" height="45.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="38"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="MH0-dB-8aU">
+                                <rect key="frame" x="177.5" y="400" width="20" height="20"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="MH0-dB-8aU" firstAttribute="centerX" secondItem="8B8-sV-weT" secondAttribute="centerX" id="FPW-0B-It6"/>
+                            <constraint firstItem="8B8-sV-weT" firstAttribute="centerX" secondItem="seU-B2-20H" secondAttribute="centerX" id="R78-ht-wZZ"/>
+                            <constraint firstItem="8B8-sV-weT" firstAttribute="centerY" secondItem="seU-B2-20H" secondAttribute="centerY" id="ccE-Ok-cjq"/>
+                            <constraint firstItem="MH0-dB-8aU" firstAttribute="top" secondItem="8B8-sV-weT" secondAttribute="bottom" constant="33.5" id="uxP-6E-SIZ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="seU-B2-20H"/>
                     </view>
+                    <connections>
+                        <outlet property="activityIndicator" destination="MH0-dB-8aU" id="aah-qK-a8S"/>
+                        <segue destination="L1T-rD-C5Q" kind="show" identifier="startApp" id="iKH-O6-RN8"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KqD-Tn-hIg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-1201" y="107"/>
+        </scene>
+        <!--Forcast-->
+        <scene sceneID="F97-b0-T6c">
+            <objects>
+                <tableViewController id="VZK-Pl-WMu" customClass="ForecastViewController" customModule="Weather" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="co2-NN-utA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" rowHeight="117" id="SLR-qx-8ri" customClass="DailyForecastTableViewCell" customModule="Weather" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="117"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SLR-qx-8ri" id="Z8D-ed-uHd">
+                                    <rect key="frame" x="0.0" y="0.0" width="341" height="116.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="eNF-ce-RhK">
+                                            <rect key="frame" x="0.0" y="0.0" width="341" height="116.5"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Rb9-Pr-QZB">
+                                                    <rect key="frame" x="16" y="33.5" width="124.5" height="50"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yia-Fq-El1">
+                                                            <rect key="frame" x="0.0" y="0.0" width="115.5" height="50"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b1F-bb-zyA">
+                                                            <rect key="frame" x="123.5" y="0.0" width="1" height="50"/>
+                                                            <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="1" id="vVw-Au-SQX"/>
+                                                            </constraints>
+                                                        </view>
+                                                    </subviews>
+                                                </stackView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="Pa4-k5-QGI">
+                                                    <rect key="frame" x="140.5" y="33.5" width="134.5" height="50"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DTx-L8-74b">
+                                                            <rect key="frame" x="0.0" y="0.0" width="115.5" height="50"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FCN-zp-HlF">
+                                                            <rect key="frame" x="133.5" y="0.0" width="1" height="50"/>
+                                                            <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="1" id="g3A-Ee-Iyy"/>
+                                                            </constraints>
+                                                        </view>
+                                                    </subviews>
+                                                </stackView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5CX-0s-llU">
+                                                    <rect key="frame" x="275" y="33.5" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="QvT-t9-6XU"/>
+                                                        <constraint firstAttribute="height" constant="50" id="uOa-5k-YO1"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="yia-Fq-El1" firstAttribute="width" secondItem="DTx-L8-74b" secondAttribute="width" id="ocu-Sw-iuC"/>
+                                            </constraints>
+                                            <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="eNF-ce-RhK" secondAttribute="bottom" id="019-gB-Oe9"/>
+                                        <constraint firstAttribute="trailing" secondItem="eNF-ce-RhK" secondAttribute="trailing" id="Dg6-KW-t11"/>
+                                        <constraint firstItem="eNF-ce-RhK" firstAttribute="leading" secondItem="Z8D-ed-uHd" secondAttribute="leading" id="RCW-3x-x3r"/>
+                                        <constraint firstItem="eNF-ce-RhK" firstAttribute="top" secondItem="Z8D-ed-uHd" secondAttribute="top" id="oRL-HC-Fxn"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="dayLabel" destination="yia-Fq-El1" id="3yv-Hr-1Nc"/>
+                                    <outlet property="forecastImageView" destination="5CX-0s-llU" id="Q7a-FW-hQu"/>
+                                    <outlet property="tempLabel" destination="DTx-L8-74b" id="Iip-c7-Iwk"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="VZK-Pl-WMu" id="R9R-sJ-gXa"/>
+                            <outlet property="delegate" destination="VZK-Pl-WMu" id="nil-he-GWx"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Forcast" id="EEB-LD-JVe"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5pI-uC-OZC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="449" y="107"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="nzE-5V-S7j">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="L1T-rD-C5Q" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="doL-73-nEv">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="VZK-Pl-WMu" kind="relationship" relationship="rootViewController" id="2Wd-Yi-8zb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6qH-3e-G6P" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-370" y="107"/>
         </scene>
     </scenes>
 </document>
